errors.txt
src/7.1/cc/cc.c: In function ‘parse_command’:
src/7.1/cc/cc.c:6946:49: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
 6946 |                                 if (access(cfe, EX_OK) == -1) {
      |                                                 ^~~~~
      |                                                 X_OK
src/7.1/cc/cc.c:6946:49: note: each undeclared identifier is reported only once for each function it appears in
src/7.1/cc/cc.c: In function ‘mktempstr’:
src/7.1/cc/cc.c:10265:25: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
10265 |         (access(filter, EX_OK) == 0)) {
      |                         ^~~~~
      |                         X_OK
src/7.1/cc/cc.c: In function ‘run’:
src/7.1/cc/cc.c:10281:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
10281 |     SIG_PF sp88;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:10282:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
10282 |     SIG_PF sp84;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:10287:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
10287 |     sysset_t sp34;
      |     ^~~~~~~~
      |     sigset_t
src/7.1/cc/cc.c:10402:21: error: request for member ‘word’ in something not a structure or union
10402 |                 sp34.word[var_s0] = 0;
      |                     ^
src/7.1/cc/cc.c: In function ‘edit_src’:
src/7.1/cc/cc.c:10476:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
10476 |     SIG_PF sp48;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:10477:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
10477 |     SIG_PF sp44;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c: In function ‘func_00432940’:
src/7.1/cc/cc.c:11499:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
11499 |     sysset_t syscalls; // sp24
      |     ^~~~~~~~
      |     sigset_t
